# promethius

./: Cargo.toml  LICENSE-MIT  README.md
event_deriver/: Cargo.toml
event_deriver/src/: lib.rs
res/shaders/three_d/: colored_triangle_list_shader.wgsl  textured_triangle_list_shader.wgsl
res/shaders/two_d/: colored_triangle_list_shader.wgsl  textured_triangle_list_shader.wgsl
src/: app.rs  lib.rs
src/core_plugins/: mod.rs
src/core_plugins/acceleration_structures/: collider.rs  mod.rs  quad_tree.rs
src/core_plugins/acceleration_structures_plugin/: aabb.rs  collider.rs  quad_tree.rs
src/core_plugins/camera_plugin/: camera.rs  controller_component.rs  mod.rs  render_component.rs
src/core_plugins/label_plugin/: label.rs  mod.rs
src/core_plugins/object_plugin/: mod.rs  object_registry.rs
src/core_plugins/render_plugin/: mod.rs  render_config.rs  state.rs
src/core_plugins/scale_plugin/: mod.rs  position_scale_component.rs  size_scale_component.rs
src/core_plugins/time_plugin/: accumulators.rs  mod.rs  tick.rs  time.rs
src/core_plugins/ui_plugin/: button.rs  mod.rs  ui_acceleration_structure.rs
src/default_plugins/: mod.rs
src/default_plugins/spawn_cameras/: mod.rs
src/plugins/: mod.rs
src/scheduler/: event.rs  hecs_wrapper.rs  mod.rs  resource.rs  scheduler.rs  system.rs
src/scheduler/tests/: mod.rs  panic_tests.rs  pass_tests.rs
src/utilities/: mod.rs
src/utilities/acceleration_structures/: mod.rs  quad_tree.rs
src/utilities/bimap/: mod.rs
src/utilities/entity/: mod.rs  raw_render_component.rs  render_component.rs
(+21 files in other folders)
