[package]
name = "promethius"
version = "0.1.0"
edition = "2021"

[dependencies]
event_deriver = { path = "./event_deriver" }

small_derive_deref = "0.1.3"
small_iter_fields = "0.1.5"
small_read_only = "0.1.0"

wgpu = "22.1.0"
winit = "0.30.5"

hecs = "0.10.5"
hecs-macros = "0.10.0"

env_logger = "0.11.5"
log = "0.4.22"

cgmath = "0.18.0"

anyhow = "1.0.89"

bytemuck = { version = "1.16.3", features = ["derive"] }

pollster = "0.3.0"
tokio = { version = "1.39.3", features = ["macros", "rt"] }

tobj = { version = "4.0.2", features = ["async"] }
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
